--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-command = "npm install"
+command = "npm run build"
 functions = "netlify/functions"
-publish = "."
+publish = "public"
 
 # ⚠️ IMPORTANT: Data persistence issue with Netlify Functions
 # See NETLIFY_PERSISTENCE.md for details and solutions
